--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -11,7 +11,14 @@
     <div class="w-full min-h-screen bg-zinc-900 text-white p-8">
 
         <a href="/logout" class="bg-red-500 rounded-md px-3 py-2 text-sm mb-5 inline-block">Log Out</a>
-        <h1 class="mb-3 text-3xl"><span class="font-light">Hello</span> <%= user.name %></h1>
+
+        <div class="flex items-start gap-3 mt-3">
+            <div class="w-10 h-10rounded-md overflow-hidden">
+                <img class="w-full h-full object-cover" src="/images/uploads/<%= user.profilepic %>" alt="">
+            </div>
+            <h1 class="mb-3 text-3xl"><span class="font-light">Hello</span> <%= user.name %></h1>
+        </div>
+        
 
         <h5>You can create a new post</h5>
 
